--- a/src/componets/Header/header.css
+++ b/src/componets/Header/header.css
@@ -15,3 +15,34 @@
     position: relative;
     z-index: 0;
 }
+
+.header__conatiner::before{
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 10px;
+    z-index: -1;
+    border: 2px solid transparent;
+    background: linear-gradient(to right, #a7e7a5, #0cdd27) border-box;
+    mask:linear-gradient(#fff 0 0) padding-box,linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
+}
+
+.header__input{
+    width: 80%;
+    height: 30px;
+    font-size: 1rem;
+    border: none;
+    background-color: transparent; 
+    outline: 0;
+}
+
+.header__input::placeholder{
+    font-size: 1rem;
+    color: white;
+}
+
+img {
+    cursor: pointer;
+  }
