--- a/src/componets/Header/header.css
+++ b/src/componets/Header/header.css
@@ -36,6 +36,7 @@
     border: none;
     background-color: transparent; 
     outline: 0;
+    font-family: "GandhiSansRegular";
 }
 
 .header__input::placeholder{
