--- a/src/componets/Menu/Menu.css
+++ b/src/componets/Menu/Menu.css
@@ -40,6 +40,7 @@ a {
     text-decoration: none;
     font-size: 1.125rem;
     color: #d9d9d9;
+    font-family: "GandhiSansRegular";
   }
 
   a:hover {
