--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,7 @@
+@import-normalize;
 
+
+/* rest of app styles */
 body {
     margin: 0;
     padding: 0;
@@ -7,3 +10,33 @@ body {
     background: linear-gradient(0deg, rgba(203,56,55,1) 0%, rgba(232,8,8,1) 100%);
     box-sizing: border-box;
 }
+
+body::-webkit-scrollbar {
+    width: 3px;
+}
+  
+body::-webkit-scrollbar-track {
+    background: linear-gradient(0deg, rgba(203,56,55,1) 0%, rgba(232,8,8,1) 100%);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: rgb(203,56,55);
+    border-radius: 20px;
+}
+
+@font-face {
+    font-family: "GandhiSansRegular";
+    src:local('GandhiSansRegular') 
+    url('../assets/fontes/GandhiSans-Regular.otf');
+    font-weight: 500;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "GandhiSansBold";
+    src:local("GandhiSansBold"),
+      url("../assets/fontes/GandhiSans-Bold.otf") format("truetype");
+    font-weight: 700;
+    font-display: swap;
+  }
+
