--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,7 +2,7 @@ main{
     margin: 50px 30px 0 ;
 }
 
-section{
+.section{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,4 +30,12 @@ section{
     height: 144px;
     top: 75px;
     left: 44px;
+}
+
+.home__galeria{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-left: 17%;
+  margin-top: 1rem;
 }
