--- a/src/componets/Footer/Footer.css
+++ b/src/componets/Footer/Footer.css
@@ -25,3 +25,9 @@
     color: #d9d9d9;
     font-family: "GandhiSansRegular";
 }
+
+@media(max-width:500px){
+    .rodape__icones{
+        width: 30%;
+    }
+}
