--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -23,7 +23,7 @@ main{
 .section__banner-title{
     position: absolute;
     z-index: 1;
-    color: #d9d9d9;
+    color: white;
     font-size: 2.5rem;
     font-family: "GandhiSansBold";
     width: 401px;
